# encore

./: .gitignore  AOT.md  CLAUDE.md  Cargo.toml  FLECHE.md  OPTIMIZER.md  README.md  SCHEME.md  VM.md  benchmarks.jsonl
.cursor/: mcp.json
crates/encore/: Cargo.toml
crates/encore/src/: main.rs
crates/encore_compile/: Cargo.toml
crates/encore_compile/src/: cps.rs  emit.rs  ir.rs  lib.rs  resolver.rs
crates/encore_compile/tests/: emit_tests.rs
crates/encore_compiler/: Cargo.toml
crates/encore_compiler/src/: frontend.rs  lib.rs  pipeline.rs
crates/encore_compiler/tests/: cps_transform_tests.rs  emit_tests.rs  fleche_tests.rs  resolver_tests.rs  simplify_tests.rs
crates/encore_derive/: Cargo.toml
crates/encore_derive/src/: attrs.rs  common.rs  decode.rs  encode.rs  lib.rs
crates/encore_disasm/: Cargo.toml
crates/encore_disasm/src/: lib.rs  tui.rs
crates/encore_fleche/: Cargo.toml
crates/encore_fleche/src/: lexer.rs  lib.rs  parser.rs
crates/encore_fleche/tests/: fleche_tests.rs
crates/encore_scheme/: Cargo.toml
crates/encore_scheme/src/: desugar.rs  ir.rs  lib.rs  parser.rs
crates/encore_scheme/tests/: scheme_tests.rs
crates/encore_vm/: Cargo.toml
crates/encore_vm/src/: arena.rs  code.rs  (+10 more)
examples/: ackermann.fleche  church.fleche  fibonacci.fleche  map_filter.fleche  merge_sort.fleche  reverse.fleche  sum.fleche
examples/ackermann/: Cargo.toml  ackermann.fleche  ackermann.scm
examples/bytes_of_list_nat/: Cargo.toml  bytes_of_list_nat.scm
examples/church/: Cargo.toml  church.fleche  church.scm
examples/eval/: Cargo.toml  build.rs  eval.scm  memory.x
examples/fibonacci/: Cargo.toml  build.rs  fibonacci.fleche  fibonacci.scm
examples/fsm/: Cargo.toml  fsm.fleche  fsm.scm
examples/gcd/: .gitignore  Cargo.toml  gcd.scm  gcd.v
examples/if_binding/: if_binding.fleche
examples/let_chain/: let_chain.fleche
examples/map_filter/: Cargo.toml  map_filter.fleche  map_filter.scm
examples/rbtree/: Cargo.toml  build.rs
examples/rbtree/scheme/: rbtree.scm
examples/rbtree/src/: main.rs
examples/reverse/: Cargo.toml  reverse.fleche  reverse.scm
examples/sort/: Cargo.toml  build.rs  sort.scm
examples/sum/: Cargo.toml  sum.fleche  sum.scm
examples/tree/: Cargo.toml  tree.fleche  tree.scm
examples/tree/.cargo/: config.toml
examples/tree/src/: main.rs
rocq/: README.md
rocq/RocqOfRust/: M.v  dune
rocq/RocqOfRust/links/: M.v  RocqOfRust.v
rocq/_build/: .db  .digest-db  trace.csexp
rocq/encore_vm/: arena.v  dune  gc.v  program.v  value.v
rocq/proofs/: SimArena.v  dune
scripts/: benchmark.sh  count_insns.py
(+109 files in other folders)
