[workspace]
resolver = "3"
members = ["crates/*"]
exclude = [
    "examples/sort",
    "examples/rbtree",
    "examples/eval",
    "examples/church",
    "examples/fibonacci",
    "examples/sum",
    "examples/ackermann",
    "examples/reverse",
    "examples/map_filter",
    "examples/tree",
    "examples/fsm",
]
