[package]
name = "encore-baremetal-tree"
version = "0.1.0"
edition = "2024"

[features]
default = ["fleche"]
fleche = ["dep:encore_fleche"]
scheme = ["dep:encore_scheme"]

[dependencies]
encore_vm = { path = "../../crates/encore_vm" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0"

[build-dependencies]
encore_fleche = { path = "../../crates/encore_fleche", optional = true }
encore_scheme = { path = "../../crates/encore_scheme", optional = true }
encore_compiler = { path = "../../crates/encore_compiler" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
